--- a/client/app/pool/_image-lobby.view.html
+++ b/client/app/pool/_image-lobby.view.html
@@ -1,7 +1,7 @@
 <div class="scroll-container">
   <div id="image-create-panel" class="row">
     <div class="col-6 col-md-4 d-flex flex-column justify-content-around">
-      <div class="row"><div class="col-12">
+      <div class="scrollable">
         <md-card>
           <md-card-title class="md-accent">
             Paint Queue
@@ -17,51 +17,54 @@
                 </template>
               </md-chip-list>
             </section>
+            <section>
+              <p>Stuff</p>
+              <p *ngFor="let chain of allImageChains">{{chain.displayName}}</p>
+              <p>Stuff</p>
+            </section>
           </md-card-content>
         </md-card>
-      </div></div>
-      <div class="row"><div class="col-12">
         <md-card>
           <md-card-title class="md-accent">Recently Painted</md-card-title>
           <md-card-content>
             <md-chip-list>
-              <template ngFor let-recentItem [ngForOf]="paintJobsDone">
-                <md-chip selectable="true" color="primary" (select)="recentItem.showCard=true"
-                         (deselect)="recentItem.showCard=false" [ngClass]="{hidden: selected}">
-                  {{recentItem.phrasePainted}}
-                </md-chip>
-                <md-card *ngIf="recentItem.showCard">
-                  <md-card-header>
-                    <md-card-title>{{recentItem.phrasePainted}}</md-card-title>
-                    <md-card-subtitle>
-                      <button md-mini-fab (click)="iconToText()">
-                        <md-icon>trash</md-icon></button>
-                      <button md-mini-fab (click)="iconToText()">
-                        <md-icon>close</md-icon></button>
-                    </md-card-subtitle>
-                  </md-card-header>
-                  <md-card-content>
-                    <section>See preview image here TODO</section>
-                    See preview image here TODO
-                    <section>See preview image here TODO</section>
-                  </md-card-content>
-                  <md-card-actions>
-                    <button md-mini-fab (click)="iconToText()">
-                      <md-icon>bookmark</md-icon>
-                    </button>
-                    <button md-mini-fab (click)="iconToText()">
-                      <md-icon>open</md-icon>
-                    </button>
-                  </md-card-actions>
-                </md-card>
-              </template>
+              <!--<template ngFor let-recentItem [ngForOf]="paintJobsDone">-->
+                <!--<md-chip selectable="true" color="primary" (select)="recentItem.showCard=true"-->
+                         <!--(deselect)="recentItem.showCard=false" [ngClass]="{hidden: selected}">-->
+                  <!--{{recentItem.phrasePainted}}-->
+                <!--</md-chip>-->
+                <!--<md-card *ngIf="recentItem.showCard">-->
+                  <!--<md-card-header>-->
+                    <!--<md-card-title>{{recentItem.phrasePainted}}</md-card-title>-->
+                    <!--<md-card-subtitle>-->
+                      <!--<button md-mini-fab (click)="iconToText()">-->
+                        <!--<md-icon>trash</md-icon></button>-->
+                      <!--<button md-mini-fab (click)="iconToText()">-->
+                        <!--<md-icon>close</md-icon></button>-->
+                    <!--</md-card-subtitle>-->
+                  <!--</md-card-header>-->
+                  <!--<md-card-content>-->
+                    <!--<section>See preview image here TODO</section>-->
+                    <!--See preview image here TODO-->
+                    <!--<section>See preview image here TODO</section>-->
+                  <!--</md-card-content>-->
+                  <!--<md-card-actions>-->
+                    <!--<button md-mini-fab (click)="iconToText()">-->
+                      <!--<md-icon>bookmark</md-icon>-->
+                    <!--</button>-->
+                    <!--<button md-mini-fab (click)="iconToText()">-->
+                      <!--<md-icon>open</md-icon>-->
+                    <!--</button>-->
+                  <!--</md-card-actions>-->
+                <!--</md-card>-->
+              <!--</template>-->
             </md-chip-list>
           </md-card-content>
         </md-card>
-      </div></div>
+      </div>
     </div>
     <div ngSwitch="canvasStatus" class="col-6 col-md-8">
-      <md-card>
+      <md-card class="scrollable">
         <md-card-title class="md-primary">Workspace</md-card-title>
         <md-card-subtitle>
           <span *ngIf="willPaint" class="align-text-top">Waiting to paint "{{phraseToPaint}}"</span>
@@ -70,8 +73,7 @@
         </md-card-subtitle>
         <md-card-content>
           <div class="d-flex flex-column align-items-center justify-content-around">
-            <canvas #wordPaint class="align-self-center border-2"
-                    [sizeable]="paintSize" [paintable]="paintProgress"></canvas>
+            <canvas #wordPaint class="align-self-center border-2" paintable></canvas>
             <md-progress-bar *ngIf="isPainting" color="md-warn" class="mt-1 mb-auto" [mode]="progressMode"
                              [value]="pctDone" [bufferValue]="nextPctDone"></md-progress-bar>
           </div>
