--- a/client/app/shared/canvas-cache/_durable-canvas-container.view.html
+++ b/client/app/shared/canvas-cache/_durable-canvas-container.view.html
@@ -1,3 +1,3 @@
-<template #canvasStore cdkPortalHost style="display: none;">
+<ng-template #canvasStore cdkPortalHost style="display: none;">
 
-</template>
+</ng-template>
